website/versioned_docs/version-2.10.x/reference/targets/python_tests.mdx
---
title: python_tests
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `python_test` target for each file in the `sources` field.

Backend: <span className="color--primary">`pants.backend.python`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>
Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.
</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>
A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.
</Field>

## `interpreter_constraints`

<Field
    type_repr={`field.type_hint`}
>
The Python interpreters this code is compatible with.

Each element should be written in pip-style format, e.g. `CPython==2.7.*` or `CPython>=3.6,<4`. You can leave off `CPython` as a shorthand, e.g. `>=2.7` will be expanded to `CPython>=2.7`.

Specify more than one element to OR the constraints, e.g. `['PyPy==3.7.*', 'CPython==3.7.*']` means either PyPy 3.7 _or_ CPython 3.7.

If the field is not set, it will default to the option `[python].interpreter_constraints`.

See https://www.pantsbuild.org/v2.10/docs/python-interpreter-compatibility for how these interpreter constraints are merged with the constraints of dependencies.
</Field>

## `resolve`

<Field
    type_repr={`field.type_hint`}
>
The resolve from `[python].resolves` to use.

If not defined, will default to `[python].default_resolve`.

All dependencies must share the same value for their `resolve` field.
</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>
Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `./pants dependencies` or `./pants peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.10/docs/targets#target-addresses and https://www.pantsbuild.org/v2.10/docs/targets#target-generation for more about how addresses are formed, including for generated targets. You can also run `./pants list ::` to find all addresses in your project, or `./pants list dir:` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.
</Field>

## `timeout`

<Field
    type_repr={`field.type_hint`}
>
A timeout (in seconds) used by each test file belonging to this target.

If unset, will default to `[pytest].timeout_default`; if that option is also unset, then the test will never time out. Will never exceed `[pytest].timeout_maximum`. Only applies if the option `--pytest-timeouts` is set to true (the default).
</Field>

## `runtime_package_dependencies`

<Field
    type_repr={`field.type_hint`}
>
Addresses to targets that can be built with the `./pants package` goal and whose resulting artifacts should be included in the test run.

Pants will build the artifacts as if you had run `./pants package`. It will include the results in your test&#x27;s chroot, using the same name they would normally have, but without the `--distdir` prefix (e.g. `dist/`).

You can include anything that can be built by `./pants package`, e.g. a `pex_binary`, `python_awslambda`, or an `archive`.
</Field>

## `extra_env_vars`

<Field
    type_repr={`field.type_hint`}
>
Additional environment variables to include in test processes. Entries are strings in the form `ENV_VAR=value` to use explicitly; or just `ENV_VAR` to copy the value of a variable in Pants&#x27;s own environment. This will be merged with and override values from [test].extra_env_vars.
</Field>

## `skip_tests`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>
If true, don&#x27;t run this target&#x27;s tests.
</Field>

## `sources`

<Field
    type_repr={`field.type_hint`}
    default_repr={`('test_*.py', '*_test.py', 'tests.py')`}
>
A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['example.ext', 'test_*.ext', '!test_ignore.ext']`.
</Field>

## `overrides`

<Field
    type_repr={`field.type_hint`}
>
Override the field values for generated `python_test` targets.

Expects a dictionary of relative file paths and globs to a dictionary for the overrides. You may either use a string for a single path / glob, or a string tuple for multiple paths / globs. Each override is a dictionary of field names to the overridden value.

For example:
```
overrides=&#123;
  &quot;foo_test.py&quot;: &#123;&quot;timeout&quot;: 120]&#125;,
  &quot;bar_test.py&quot;: &#123;&quot;timeout&quot;: 200]&#125;,
  (&quot;foo_test.py&quot;, &quot;bar_test.py&quot;): &#123;&quot;tags&quot;: [&quot;slow_tests&quot;]&#125;,
&#125;
```

File paths and globs are relative to the BUILD file&#x27;s directory. Every overridden file is validated to belong to this target&#x27;s `sources` field.

If you&#x27;d like to override a field&#x27;s value for every `python_test` target generated by this target, change the field directly on this target rather than using the `overrides` field.

You can specify the same file name in multiple keys, so long as you don&#x27;t override the same field more than one time for the file.
</Field>

## `skip_autoflake`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.experimental.python.lint.autoflake"
>
If true, don&#x27;t run Autoflake on this target&#x27;s code.
</Field>

## `skip_pyupgrade`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.experimental.python.lint.pyupgrade"
>
If true, don&#x27;t run pyupgrade on this target&#x27;s code.
</Field>

## `skip_bandit`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.python.lint.bandit"
>
If true, don&#x27;t run Bandit on this target&#x27;s code.
</Field>

## `skip_black`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.python.lint.black"
>
If true, don&#x27;t run Black on this target&#x27;s code.
</Field>

## `skip_docformatter`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.python.lint.docformatter"
>
If true, don&#x27;t run Docformatter on this target&#x27;s code.
</Field>

## `skip_flake8`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.python.lint.flake8"
>
If true, don&#x27;t run Flake8 on this target&#x27;s code.
</Field>

## `skip_isort`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.python.lint.isort"
>
If true, don&#x27;t run isort on this target&#x27;s code.
</Field>

## `skip_pylint`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.python.lint.pylint"
>
If true, don&#x27;t run Pylint on this target&#x27;s code.
</Field>

## `skip_yapf`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.python.lint.yapf"
>
If true, don&#x27;t run yapf on this target&#x27;s code.
</Field>

## `skip_mypy`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.python.typecheck.mypy"
>
If true, don&#x27;t run MyPy on this target&#x27;s code.
</Field>



</span>